修复：请求包的 URL 开头不是斜杠时，从请求行获取 URL 位置不正确导致 Payload Processing 处理结果异常的问题